analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/objectWithTypeArgsAsExpression.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE
private val commonSettingsLazy = o<caret>bject A<LanguageVersionSettings> {
   println(x)
}
